
             • warning for linear z-scale removed,

             • fixed an error that occured in Abanico Plot for a large
               data range (#188),

             • function output extended by data points in/out of
               confidence interval,

             • histogram option added,

             • dot plot option added,

             • KDE bandwidth added to plot output,

             • KDE bandwidth default changed to "SJ".

         • ‘readBIN2R()’:

             • critical bug fixed: ‘GRAIN’ and ‘GRAINNUMBER’ were not
               imported properely (thanks to Norber Mercier),

             • import speed has been improved by at least an order of
               magnitude, due to a different internal data handling
               (using of ‘data.table’ instead of ‘data.frame’). This
               may become relevant for hugh BIN-files like they are
               produced by single grain measurements (#191).  Note: The
               ‘Risoe.BINfileData-class’ remained untouched.

         • ‘writeR2BIN()’:

             • minor changes due to the changes in the function
               ‘readBIN2R()’,

             • confusing warnings during writing are suppressed.

  Internals:

         • Add new dependency for package ‘data.table’ (used in the
           function ‘readBIN2R()’).

Changes in version 0.4.0 (December 19th, 2014):

  Preface:

         • Amongst a few minor changes with this release we continued
           the homogenisation process to further unify our function
           arguments.  So far meaningful similar function arguments can
           be used over all functions in the package to produce similar
           effects (e.g., na.rm = TRUE/FALSE). For you as package user
           it means that self-written R scripts using package functions
           are likely to break. Please check the list of changes below.

           We apologise for any inconvenience!

  New S4-classes, methods:
